--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.5.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.44.0",
+    "sass-loader": "^12.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
